changed wording for the base

--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Multi-legged networking hub that routes payloads between apps via the least weighted available route – defaults to SMS routes where pre-defined routes are unavailable.">
     <meta name="author" content="Owen Onions">
 
-    <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
+    <link rel="icon" href="{% static 'images/favicons/octopus-16.png' %}">
 
     {% block css %}
     <!-- Latest compiled and minified Bootstrap CSS -->
@@ -92,7 +92,7 @@
       {% endif %}
 
       {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
+        <p>Welcome to Octopus - multi-legged network hub.</p>
       {% endblock content %}
 
     </div> <!-- /container -->
