--- a/octopus/templates/base.html
+++ b/octopus/templates/base.html
@@ -42,7 +42,11 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'home' %}">Octopus</a>
+
+          <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static 'images/icons/octopus-32.png' %}" alt="" class="d-inline-block align-text-top">
+            Octopus
+          </a>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
